stateless-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerdevs-app-service
spec:
  selector:
    app: containerdevs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
