stateless-app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: containerdevs-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: containerdevs-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: my-api-gateway # Allow traffic from API Gateway
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: my-database # Allow traffic to the database
    ports:
    - protocol: TCP
      port: 5432
